# SCOT

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  INSTALL.md  LICENSE  README.md  install.sh
DOSE/: CMakeLists.txt
DOSE/include/: AlgorithmManager.h  DOSE.h  DistEngine.h  Exceptions.h  IAlgorithmStrategy.h  LinRSolver.h  LinRegStrategy.h  LocalNLPSolver.h  LogRSolver.h  LogRegStrategy.h  RandomDataGenerator.h  Types.h  Utilities.h  types.h
DOSE/src/: AlgorithmManager.cpp  DOSE.cpp  DistEngine.cpp  LinRSolver.cpp  LinRegStrategy.cpp  LogRSolver.cpp  LogRegStrategy.cpp  RandomDataGenerator.cpp  Utilities.cpp
data/: node_0_linear_regression.dist.json  node_0_logistic_regression.dist.json  node_1_linear_regression.dist.json  node_1_logistic_regression.dist.json
docs/: Dihoa_8cpp.html  Dihoa_8cpp__incl.map  Dihoa_8cpp__incl.md5  Dihoa_8h.html  Dihoa_8h__dep__incl.map  Dihoa_8h__dep__incl.md5  Dihoa_8h__incl.map  Dihoa_8h__incl.md5  Dihoa_8h_source.html  Dipoa_8cpp.html  Dipoa_8cpp__incl.map  Dipoa_8cpp__incl.md5  Dipoa_8h.html  Dipoa_8h__dep__incl.map  Dipoa_8h__dep__incl.md5  Dipoa_8h__incl.map  Dipoa_8h__incl.md5  Dipoa_8h_source.html  DistributedOperatorSplittingEngine_8cpp.html  DistributedOperatorSplittingEngine_8cpp__incl.map  DistributedOperatorSplittingEngine_8cpp__incl.md5  DistributedOperatorSplittingEngine_8h.html  DistributedOperatorSplittingEngine_8h__dep__incl.dot  DistributedOperatorSplittingEngine_8h__dep__incl.map  DistributedOperatorSplittingEngine_8h__dep__incl.md5  DistributedOperatorSplittingEngine_8h__incl.dot  DistributedOperatorSplittingEngine_8h__incl.map  DistributedOperatorSplittingEngine_8h__incl.md5  DistributedOperatorSplittingEngine_8h_source.html  Enums_8h.html  Enums_8h__dep__incl.map  Enums_8h__dep__incl.md5  Enums_8h__incl.map  Enums_8h__incl.md5  Enums_8h_source.html  Environment_8h.html  Environment_8h__dep__incl.map  Environment_8h__dep__incl.md5  Environment_8h__incl.map  Environment_8h__incl.md5  (+728 more)
docs/docs/: Dihoa_8cpp.html  Dihoa_8cpp__incl.dot  Dihoa_8h__incl.dot  DistributedOperatorSplittingEngine_8cpp__incl.dot  Enums_8h__incl.dot  Environment_8h__incl.dot  IAlgorithm_8h__dep__incl.dot  IObjective_8h__incl.dot  InlpSolver_8h.html  InlpSolver_8h__dep__incl.dot  Iteration_8h.html  Iteration_8h__dep__incl.dot  Iteration_8h_source.html  LinRegObjectiveFunction_8h__dep__incl.dot  LogRegObjectiveFunction_8cpp.html  LogRegObjectiveFunction_8h__dep__incl.dot  LogRegObjectiveFunction_8h__incl.dot  Logger_8cpp.html  Logger_8cpp__incl.dot  Logger_8h__dep__incl.dot  Logger_8h__incl.dot  MessagePassingInterface_8cpp.html  MessagePassingInterface_8h__incl.dot  MipSolverGurobiMultipleTree_8h__incl.dot  MipSolverGurobiMultipleTree_8h_source.html  MipSolverGurobiSingleTree_8h__incl.dot  Model_8cpp.html  Model_8cpp__incl.dot  Model_8h__dep__incl.dot  Results_8cpp.html  ScotSolver_8h__incl.dot  Structs_8h.html  TaskAddDualSolution_8cpp.html  TaskAddDualSolution_8h__dep__incl.dot  TaskAddDualSolution_8h_source.html  TaskBase_8h__dep__incl.dot  TaskBase_8h_source.html  TaskBcastDualSolution_8h.html  TaskCheckDuration_8cpp__incl.dot  TaskCheckDuration_8h_source.html  (+96 more)
docs/html/: Dihoa_8h__dep__incl.dot  Dihoa_8h_source.html  Dipoa_8cpp.html  Dipoa_8cpp__incl.dot  Dipoa_8h__dep__incl.dot  Dipoa_8h__incl.dot  Dipoa_8h_source.html  DistributedOperatorSplittingEngine_8cpp.html  DistributedOperatorSplittingEngine_8h.html  Enums_8h.html  Enums_8h__dep__incl.dot  Enums_8h_source.html  Environment_8h__dep__incl.dot  Environment_8h_source.html  IAlgorithm_8h.html  IAlgorithm_8h__incl.dot  IMIPSolver_8h.html  (+227 more)
doxydoc/: config
doxygen/: config
scotpy/: benchmark.py  example.py  plot_bench_res.py  req.txt  results_20_mrow_10000_b2.json  results_30_20_1000_b1.json  results_n_30_p_1_m_10000.json  results_n_30_p_20_m_5000_b4.json  results_n_50_p_1_m_20000.json  scenario_1_80.json  scenario_1_90.json  scenario_2_80.json  scenario_2_90.json  scenario_3_80.json  scenario_4_80.json  scenario_4_90.json  scenario_5_80.json  scenario_5_90.json  scenario_6_80.json  scenario_6_90.json  scenario_7_80.json  scenario_7_90.json  scotpy.py  server.py
src/: cli_utils.cpp  cli_utils.h  scot.cpp
src/Algorithm/: CMakeLists.txt  Dihoa.cpp  Dihoa.h  Dipoa.cpp  Dipoa.h  IAlgorithm.h
src/MIPSolver/: CMakeLists.txt  IMIPSolver.h  MipSolverGurobiMultipleTree.cpp  MipSolverGurobiMultipleTree.h  MipSolverGurobiSingleTree.cpp  MipSolverGurobiSingleTree.h
src/PrimalSolver/: CMakeLists.txt  DistributedOperatorSplittingEngine.cpp  DistributedOperatorSplittingEngine.h  InlpSolver.h
src/Solver/: CMakeLists.txt  Enums.h  Environment.h  Iteration.cpp  Iteration.h  Logger.cpp  Logger.h  MainSolver.cpp  MainSolver.h  MessagePassingInterface.cpp  MessagePassingInterface.h  Report.cpp  Report.h  Results.cpp  Results.h  ScotSolver.cpp  ScotSolver.h  Structs.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h  settings.h
src/Tasks/: CMakeLists.txt  TaskAddDualSolution.cpp  TaskAddDualSolution.h  TaskAddLinearOuterApproximation.cpp  TaskAddLinearOuterApproximation.h  TaskAddQuadraticOuterApproximation.cpp  TaskAddQuadraticOuterApproximation.h  TaskBase.cpp  TaskBase.h  TaskBcastDualSolution.cpp  TaskBcastDualSolution.h  TaskCheckDuration.cpp  TaskCheckDuration.h  TaskCheckHybridEvent.cpp  TaskCheckHybridEvent.h  TaskCheckSocEvent.cpp  TaskCheckSocEvent.h  TaskCheckTerminationGap.cpp  TaskCheckTerminationGap.h  TaskComputeObjectiveGap.cpp  TaskComputeObjectiveGap.h  TaskCreateMultipleTreeDualProblem.cpp  TaskCreateMultipleTreeDualProblem.h  TaskDistributedNlpSolution.cpp  TaskDistributedNlpSolution.h  TaskGatherLocalLinearOuterApproximations.cpp  TaskGatherLocalLinearOuterApproximations.h  TaskGatherLocalQuadraticOuterApproximations.cpp  TaskGatherLocalQuadraticOuterApproximations.h  TaskInitializeMultipleTreeDualSolver.cpp  TaskInitializeMultipleTreeDualSolver.h  TaskInitializeNewIteration.cpp  TaskInitializeNewIteration.h  TaskInitializeSingleTreeDualSolver.cpp  TaskInitializeSingleTreeDualSolver.h  TaskManager.cpp  TaskManager.h  TaskPrintIterationInfo.cpp  TaskPrintIterationInfo.h  TaskQueue.cpp  (+5 more)
(+475 files in other folders)
